--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,3 +1,10 @@
-<div class="">
+<div class="tree">
+  <div class="name" *ng-if="root">
+    {{root.name}}
+  </div>
+  <div class="children" *ng-if="root">
+    <tree *ng-for="#childNode of root.children;"     [root]="childNode">
 
+    </tree>
+  </div>
 </div>
