注解 和 动态加载

--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,5 +1,6 @@
 <div class="tree">
   <div class="name" *ng-if="root">
+    <div id="child"></div>
     {{root.name}}
   </div>
   <div class="children" *ng-if="root">
@@ -7,4 +8,5 @@
 
     </tree>
   </div>
+
 </div>
